--- a/templates/base.html
+++ b/templates/base.html
@@ -129,20 +129,17 @@
         <div class="row gy-4">
           <div class="col-lg-4 col-md-6">
             <div class="footer-widget footer-about">
-              <a href="index.html" class="logo">
-                <span class="sitename">NiceShop</span>
+              <a href="{% url 'HOME:homeapp' %}" class="logo">
+                <span class="sitename">Universidad Mariano Gálvez</span>
               </a>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in nibh vehicula, facilisis magna ut, consectetur lorem. Proin eget tortor risus.</p>
-
+              <p>La Universidad Mariano Gálvez de Guatemala es una institución privada de educación superior, dedicada a la formación integral, la investigación y la proyección social.</p>
               <div class="social-links mt-4">
-                <h5>Connect With Us</h5>
+                <h5>Redes Sociales</h5>
                 <div class="social-icons">
-                  <a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
-                  <a href="#" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
-                  <a href="#" aria-label="Twitter"><i class="bi bi-twitter-x"></i></a>
-                  <a href="#" aria-label="TikTok"><i class="bi bi-tiktok"></i></a>
-                  <a href="#" aria-label="Pinterest"><i class="bi bi-pinterest"></i></a>
-                  <a href="#" aria-label="YouTube"><i class="bi bi-youtube"></i></a>
+                  <a href="https://www.facebook.com/umg.edu.gt/" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/umgoficial/" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+                  <a href="https://twitter.com/umgoficial" aria-label="Twitter"><i class="bi bi-twitter-x"></i></a>
+                  <a href="https://www.youtube.com/@umgoficial" aria-label="YouTube"><i class="bi bi-youtube"></i></a>
                 </div>
               </div>
             </div>
@@ -150,60 +147,54 @@
 
           <div class="col-lg-2 col-md-6 col-sm-6">
             <div class="footer-widget">
-              <h4>Shop</h4>
+              <h4>Enlaces</h4>
               <ul class="footer-links">
-                <li><a href="category.html">New Arrivals</a></li>
-                <li><a href="category.html">Bestsellers</a></li>
-                <li><a href="category.html">Women's Clothing</a></li>
-                <li><a href="category.html">Men's Clothing</a></li>
-                <li><a href="category.html">Accessories</a></li>
-                <li><a href="category.html">Sale</a></li>
+                <li><a href="{% url 'HOME:homeapp' %}">Inicio</a></li>
+                <li><a href="{% url 'USUARIOS:usuariosapp' %}">Usuarios</a></li>
+                <li><a href="{% url 'VIDEOS:videosapp' %}">Videos</a></li>
+                <li><a href="https://www.umg.edu.gt/oferta-academica">Oferta Académica</a></li>
+                <li><a href="https://www.umg.edu.gt/admision">Admisión</a></li>
+                <li><a href="https://www.umg.edu.gt/contacto">Contacto</a></li>
               </ul>
             </div>
           </div>
 
           <div class="col-lg-2 col-md-6 col-sm-6">
             <div class="footer-widget">
-              <h4>Support</h4>
+              <h4>Recursos</h4>
               <ul class="footer-links">
-                <li><a href="support.html">Help Center</a></li>
-                <li><a href="account.html">Order Status</a></li>
-                <li><a href="shiping-info.html">Shipping Info</a></li>
-                <li><a href="return-policy.html">Returns &amp; Exchanges</a></li>
-                <li><a href="#">Size Guide</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="https://www.umg.edu.gt/biblioteca">Biblioteca</a></li>
+                <li><a href="https://www.umg.edu.gt/servicios">Servicios</a></li>
+                <li><a href="https://www.umg.edu.gt/calendario">Calendario Académico</a></li>
+                <li><a href="https://www.umg.edu.gt/plataformas">Plataformas Virtuales</a></li>
+                <li><a href="https://www.umg.edu.gt/noticias">Noticias</a></li>
               </ul>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6">
             <div class="footer-widget">
-              <h4>Contact Information</h4>
+              <h4>Información de Contacto</h4>
               <div class="footer-contact">
                 <div class="contact-item">
                   <i class="bi bi-geo-alt"></i>
-                  <span>123 Fashion Street, New York, NY 10001</span>
+                  <span>3a. Avenida 9-00 zona 2, Ciudad de Guatemala, Guatemala, C.A.</span>
                 </div>
                 <div class="contact-item">
                   <i class="bi bi-telephone"></i>
-                  <span>+1 (555) 123-4567</span>
+                  <span>+502 2411-1800</span>
                 </div>
                 <div class="contact-item">
                   <i class="bi bi-envelope"></i>
-                  <span>hello@example.com</span>
+                  <span>info@umg.edu.gt</span>
                 </div>
                 <div class="contact-item">
                   <i class="bi bi-clock"></i>
-                  <span>Monday-Friday: 9am-6pm<br>Saturday: 10am-4pm<br>Sunday: Closed</span>
+                  <span>Lunes a Viernes: 8:00am - 6:00pm<br>Sábado: 8:00am - 1:00pm<br>Domingo: Cerrado</span>
                 </div>
               </div>
-
               <div class="app-buttons mt-4">
-                <a href="#" class="app-btn">
-                  <i class="bi bi-apple"></i>
-                  <span>App Store</span>
-                </a>
-                <a href="#" class="app-btn">
+                <a href="https://play.google.com/store/apps/details?id=gt.edu.umg.app" class="app-btn">
                   <i class="bi bi-google-play"></i>
                   <span>Google Play</span>
                 </a>
@@ -219,39 +210,21 @@
         <div class="row gy-3 align-items-center">
           <div class="col-lg-6 col-md-12">
             <div class="copyright">
-              <p>© <span>Copyright</span> <strong class="sitename">NiceShop</strong>. All Rights Reserved.</p>
+              <p>© <span>{{ now|date:"Y" }}</span> <strong class="sitename">Universidad Mariano Gálvez</strong>. Todos los derechos reservados.</p>
             </div>
             <div class="credits mt-1">
-              <!-- All the links in the footer should remain intact. -->
-              <!-- You can delete the links only if you've purchased the pro version. -->
-              <!-- Licensing information: https://bootstrapmade.com/license/ -->
-              <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+              Desarrollado por estudiantes de la Universidad Mariano Gálvez.
             </div>
           </div>
-
           <div class="col-lg-6 col-md-12">
             <div class="d-flex flex-wrap justify-content-lg-end justify-content-center align-items-center gap-4">
-              <div class="payment-methods">
-                <div class="payment-icons">
-                  <i class="bi bi-credit-card" aria-label="Credit Card"></i>
-                  <i class="bi bi-paypal" aria-label="PayPal"></i>
-                  <i class="bi bi-apple" aria-label="Apple Pay"></i>
-                  <i class="bi bi-google" aria-label="Google Pay"></i>
-                  <i class="bi bi-shop" aria-label="Shop Pay"></i>
-                  <i class="bi bi-cash" aria-label="Cash on Delivery"></i>
-                </div>
-              </div>
-
               <div class="legal-links">
-                <a href="tos.html">Terms</a>
-                <a href="privacy.html">Privacy</a>
-                <a href="tos.html">Cookies</a>
+                <a href="https://www.umg.edu.gt/privacidad">Política de Privacidad</a>
+                <a href="https://www.umg.edu.gt/terminos">Términos y Condiciones</a>
               </div>
             </div>
           </div>
         </div>
-
       </div>
     </div>
   </footer>
